# ev-charge-controller

./: README
firmware-pico/: CMakeLists.txt  bms.c  charge_controller.c  charge_controller.pio
hardware/: charge-controller-cache.lib  charge-controller.kicad_pcb  charge-controller.kicad_pro  charge-controller.kicad_sch  charge-controller.pro  charge-controller.sch
